--- a/Writerside/topics/2025-07-15.md
+++ b/Writerside/topics/2025-07-15.md
@@ -1,5 +1,7 @@
 ﻿# 2025-07-15
 
+<secondary-label ref="breaking"/>
+
 Refactored `TW_MonitorPositions` to allow subscriptions to a Grid and Radius.
 
 <warning>
