--- a/Writerside/topics/2025-07-17.md
+++ b/Writerside/topics/2025-07-17.md
@@ -2,4 +2,4 @@
 
 <secondary-label ref="gm-mod"/>
 
-- Fixed: When GM Disabled budget, users couldn't place things. Now when budget is disabled, the budget values returned are "0". 
+- Removed: Budget toggling. Appears this was a little more complex than just making the budget cap "Maxed". It worked until players tried building things. There are other mods that have this implemented in a better way so I'll defer to them.
