Added location settings. And changelog

--- a/Writerside/topics/2025-07-15.md
+++ b/Writerside/topics/2025-07-15.md
@@ -1,6 +1,8 @@
 ﻿# 2025-07-15
 
 <secondary-label ref="breaking"/>
+<secondary-label ref="gm-mod"/>
+<secondary-label ref="spawn-system"/>
 
 Refactored `TW_MonitorPositions` to allow subscriptions to a Grid and Radius.
 
